frontend/test/should_pass/nodeedgetypeof.grg
rule r : (string)
{
	n:Node -e:Edge->;
	
	modify {
		def var s:string;
		return(s);
		exec ( { yield s = typeof(n) + typeof(e) } );
	}
}
