frontend/test/should_fail/exec_026.grg
rule r(y : Node) : (Node) {
  modify{
    exec( (y)=r(y) ); // nothing may be assigned to graph element y
    return (y);
  }
}
